panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_elif_not_taken.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_elif_not_taken.c
---
success: true
exit_code: 0
----- stdout -----
int printf(char const*, ...);



int puts(char const*);


int main() {

    printf("printf\n");

    puts("puts");
}

----- stderr -----
