panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_indent_of_token_from_different_source_file.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_indent_of_token_from_different_source_file.c
---
success: true
exit_code: 0
----- stdout -----




int main() {

    "indented";
return 42;
    "also indented";
}

----- stderr -----
