panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_line_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_line_macro.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);

int main() {
    int xs[ 6 ] = {
7 , 7 ,
8 ,
9 ,
10 ,
    };


    printf("%zu %d %d %d %d %d %d\n", _Lengthof(xs), xs[0], xs[1], xs[2], xs[3], xs[4], xs[5]);

    return 16 ;
}

----- stderr -----
