panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_newline_in_macro_invocation.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_newline_in_macro_invocation.c
---
success: true
exit_code: 0
----- stdout -----
int printf(char const*, ...);




int main() {

    printf("hello world\n") ;


    printf("x: %d\n", 42

    ) ;
}

----- stderr -----
