panko/tests/testsuite/snapshots/testsuite__preprocess-panko__tests__cases__execute__preprocessor__test_object_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--trace-preprocessor"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_object_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
panko/tests/cases/execute/preprocessor/test_object_like_macro.c:5:9: #define PUTCHAR Object {
    name: "PUTCHAR",
    replacement: [
        Identifier("putchar")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:5:17,
    ],
}
panko/tests/cases/execute/preprocessor/test_object_like_macro.c:6:9: #define MACRO Object {
    name: "MACRO",
    replacement: [
        Int("int")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:6:15,
        Identifier("x")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:6:19,
        Equal("=")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:6:21,
        Integer(Integer { suffix: None, suffix_len: 0, base: 10, prefix_len: 0 })("42")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:6:23,
        Semicolon(";")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:6:25,
    ],
}
panko/tests/cases/execute/preprocessor/test_object_like_macro.c:7:9: #define ANOTHER_MACRO Object {
    name: "ANOTHER_MACRO",
    replacement: [
        Identifier("x")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:7:23,
        Plus("+")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:7:25,
        Identifier("y")@panko/tests/cases/execute/preprocessor/test_object_like_macro.c:7:27,
    ],
}

----- stderr -----
